--- a/arch/openrisc/configs/litex_defconfig
+++ b/arch/openrisc/configs/litex_defconfig
@@ -108,10 +108,8 @@ CONFIG_SPI=y
 CONFIG_SPI_DEBUG=y
 CONFIG_SPI_GPIO=y
 CONFIG_DEBUG_GPIO=y
-CONFIG_GPIO_74XX_MMIO=y
+CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
-CONFIG_GPIO_MOCKUP=y
-CONFIG_GPIO_PISOSR=y
 # CONFIG_HWMON is not set
 # CONFIG_RC_CORE is not set
 # CONFIG_USB_SUPPORT is not set
@@ -119,6 +117,15 @@ CONFIG_MMC=y
 CONFIG_MMC_DEBUG=y
 CONFIG_MMC_SPI=y
 CONFIG_NEW_LEDS=y
+CONFIG_LEDS_CLASS=y
+CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_TIMER=y
+CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+CONFIG_LEDS_TRIGGER_CPU=y
+CONFIG_LEDS_TRIGGER_GPIO=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
+CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_DMADEVICES=y
 # CONFIG_FILE_LOCKING is not set
 # CONFIG_DNOTIFY is not set
